crates/shipper-plan/src/snapshots/shipper_plan__tests__error_cycle_detection.snap
---
source: crates/shipper-plan/src/lib.rs
expression: "format!(\"{err:#}\")"
---
dependency cycle detected within workspace publish set
