crates/shipper-plan/src/snapshots/shipper_plan__tests__error_msg_missing_manifest.snap
---
source: crates/shipper-plan/src/lib.rs
expression: "normalize_error_message(&format!(\"{err:#}\"))"
---
failed to execute cargo metadata: `cargo metadata` exited with an error: error: manifest path `nonexistent-dir/Cargo.toml` does not exist
