crates/shipper-plan/src/snapshots/shipper_plan__tests__error_msg_non_publishable_dep.snap
---
source: crates/shipper-plan/src/lib.rs
expression: "format!(\"{err:#}\")"
---
publishable package 'npdep' depends on non-publishable workspace member 'c'
