crates/shipper-plan/src/snapshots/shipper_plan__tests__error_msg_selecting_non_publishable.snap
---
source: crates/shipper-plan/src/lib.rs
expression: "format!(\"{err:#}\")"
---
selected package not found or not publishable: c
