crates/shipper-plan/src/snapshots/shipper_plan__tests__error_msg_unknown_selected_package.snap
---
source: crates/shipper-plan/src/lib.rs
expression: "format!(\"{err:#}\")"
---
selected package not found or not publishable: totally-unknown-crate
