crates/shipper-plan/src/snapshots/shipper_plan__tests__error_unknown_package.snap
---
source: crates/shipper-plan/src/lib.rs
assertion_line: 1172
expression: "format!(\"{err:#}\")"
---
selected package not found or not publishable: does-not-exist
