crates/shipper-plan/src/snapshots/shipper_plan__tests__linear_chain_plan.snap
---
source: crates/shipper-plan/src/lib.rs
expression: snapshot_of(&ws)
---
packages:
  - name: chain-d
    version: 0.1.0
  - name: chain-c
    version: 0.1.0
  - name: chain-b
    version: 0.1.0
  - name: chain-a
    version: 0.1.0
dependencies:
  chain-a:
    - chain-b
  chain-b:
    - chain-c
  chain-c:
    - chain-d
  chain-d: []
skipped: []
registry_name: crates-io
