crates/shipper-plan/src/snapshots/shipper_plan__tests__mixed_dep_kinds_plan.snap
---
source: crates/shipper-plan/src/lib.rs
assertion_line: 2804
expression: snapshot_of(&ws)
---
packages:
  - name: build-tool
    version: 0.1.0
  - name: runtime-lib
    version: 0.1.0
  - name: app-mixed
    version: 0.1.0
dependencies:
  app-mixed:
    - build-tool
    - runtime-lib
  build-tool: []
  runtime-lib: []
skipped: []
registry_name: crates-io
